# Deep-Learn

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  FullyConnectedLayer.h  LayerInterface.h  LinearLayer.h  main.cpp
test/: CMakeLists.txt  TestFullyConnectedLayer.cpp  TestLayerInterface.cpp  TestLinearLayer.cpp
